# hypr-taskbar

./: Cargo.toml  README.md
examples/: eww.yuck
src/: lib.rs  main.rs  taskbar.rs
src/taskbar/: icon_lookup.rs
src/tests/: test_icon_picker.rs
